After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746398 - With gvfs-1.23.92 g-ir-compiler always get error GVFS-RemoteVolumeMonitor-WARNING **: Error: The connection is closed
With gvfs-1.23.92 g-ir-compiler always get error GVFS-RemoteVolumeMonitor-WAR...
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
1.23.x
Other Linux
: Normal critical
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2015-03-18 13:04 UTC by Yurg
Modified: 2015-03-20 07:59 UTC
See Also:
GNOME target: ---
GNOME version: 3.15/3.16


Attachments
build.log (4.83 KB, text/plain)
2015-03-19 04:22 UTC, Yurg
Details

Description Yurg 2015-03-18 13:04:10 UTC
(g-ir-compiler:11785): GVFS-RemoteVolumeMonitor-WARNING **: Error: The connection is closed
kernel: traps: g-ir-compiler[4216] trap int3 ip:7f76f9fa2663 sp:7fff1e6a2d90 error:0
With gvfs-1.22.3 no error's.
Comment 1 Ondrej Holy 2015-03-18 14:12:13 UTC
Thanks for taking the time to report this.
This bug report isn't very useful because it doesn't describe the bug well. If you have time and can still reproduce the bug, please read https://bugzilla.gnome.org/page.cgi?id=bug-writing.html and add a more useful description to this bug. When providing a better description, please reset the status of this bug report from NEEDINFO to its previous status.
Comment 2 Ross Lagerwall 2015-03-18 17:31:05 UTC
Maybe this is caused by 2592a8ed424 ("ProxyVolumeMonitor: Load list of installed remote monitors via dbus")?

Some steps to repro would be helpful though.
Comment 3 Yurg 2015-03-19 04:22:47 UTC
Created attachment 299782 [details]
build.log
Comment 4 Yurg 2015-03-19 04:29:32 UTC
Example compile libgweather 3.15.92.
May be this log will be helpful.
Comment 5 Ondrej Holy 2015-03-19 12:49:30 UTC
Thanks for the log. Building libgweather with jhbuild on Fedora 21 works correctly, could you add more description about your environment?
Comment 6 Ondrej Holy 2015-03-19 13:11:57 UTC
I have pushed fix for it already:
https://git.gnome.org/browse/gvfs/commit/?id=9caf2227a2d710aad3ac7ffb6307bc4ca543c06e

Could you retest it for sure please?
Comment 7 Yurg 2015-03-20 04:44:36 UTC
With this fix no error.
Comment 8 Ondrej Holy 2015-03-20 07:59:33 UTC
So fixed, thanks!