proxy volume monitor: Drop init warning

This caused make to fail e.g. in libgweather:

(g-ir-compiler:11785): GVFS-RemoteVolumeMonitor-WARNING **: Error: The connection is closed
kernel: traps: g-ir-compiler[4216] trap int3 ip:7f76f9fa2663 sp:7fff1e6a2d90 error:0
With gvfs-1.22.3 no error's

https://bugzilla.gnome.org/show_bug.cgi?id=746398